# glTF_Animation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GLSL/: anim_vert.glsl  def_frag.glsl  def_vert.glsl
src/: main.cpp
src/src/Camera/: camera.cpp  camera.h
src/src/Keyboard/: keyboard.cpp  keyboard.h
src/src/Model/: animation.cpp  animation.h  animation_channel.cpp  animation_channel.h  animation_sampler.cpp  animation_sampler.h  extension.cpp  extension.h  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  node.cpp  node.h  skin.cpp  skin.h  texture.cpp  texture.h  texture_coordinate_sets.cpp  texture_coordinate_sets.h  texture_sampler.cpp  texture_sampler.h  vertex.cpp  vertex.h
src/src/Mouse/: mouse.h
src/src/Shader/: shader.cpp  shader.h
